syntax = "proto3";

package compiler;

service CompilerApi {
  rpc Build(BuildRequest) returns (stream BuildResponseEvent) {}
}

message File {
  string path = 1;
  string checksum = 2;
  repeated string tags = 3;
  bytes data = 4;
}

message BuildRequest {
  string qpc_config = 1;
  optional string target = 2;
  repeated File files = 3;
  optional bool check_only = 4;
}

enum BuildStatus {
  OK = 0;
  ERROR = 1;
}

message BuildResponse {
  repeated File files = 1;
  BuildStatus status = 2;
  optional string message = 3;
}

message BuildStartEvent {
}

message BuildEndEvent {
}

message BuildResponseEvent {
  oneof kind {
    string message = 1;
    BuildResponse response = 2;
    BuildStartEvent start = 3;
    BuildEndEvent end = 4;
  }
}
